--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "dist/cjs/index.cjs",
   "module": "dist/index.legacy-esm.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "exports": {
     "./package.json": "./package.json",
     ".": {
