--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "test",
   "license": "MIT",
   "repository": "github:pyjun01/test-pkg",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/index.legacy-esm.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "require": "./dist/index.js",
-      "import": "./dist/index.mjs",
+      "require": "./dist/cjs/index.js",
+      "import": "./dist/es/index.mjs",
       "types": "./dist/index.d.ts"
     }
   },
@@ -29,7 +29,7 @@
     "test:watch": "vitest",
     "test:cov": "vitest --coverage",
     "test:typecheck": "tsc -p test && echo \"Types passed\"",
-    "build": "tsup src/index.ts --format cjs,esm --dts --clean",
+    "build": "tsup",
     "prepublishOnly": "yarn clean && yarn check-types && yarn format:check && yarn lint && yarn test",
     "prepack": "yarn build",
     "tsc": "tsc"
